-bug: Setting a host template filter in devices, followed by moving off and then back on the page generated an error.
-bug: PHP 5.1 snmpwalks utilize the bulk method by default.  Therefore, prefer them over the bulkwalk binary.
-bug: Allow read_config_option to force a database refresh when one is wanted.

0.8.6h
-bug#0000383: Add more verbose RRDtool debug output from Graph Management.
-bug#0000522: Take 'oid_index_parse' into consideration when handling 'OID/REGEXP:' data query fields.
-bug#0000528: Allow template_import.php to return without error when XML file is invalid in PHP 4.4 and above.
-bug#0000557: Changing filter value resulted in invalid page/row selection.
-bug#0000572: Added $database_port to config.php.
-bug#0000570: Grammar edit for text about already up-to-date.
-bug#0000571: Misleading diagnostic error messages during install have been updated.
-bug#0000582: Ampersand present in graph template graph name causes XML import to fail.
-bug#0000585: Graphing fails using AREA/STACK/LINE/HRULE/VRULE without defined color.
-bug#0000586: Remove static reference to RRA ID #1.
-bug#0000596: Proper escape of ' in graph titles.
-bug#0000599: Add filtering to graphs and data templates.
-bug#0000601: Add ability to add multiple hosts to a tree.
-bug#0000603: user_log.ip field not ipv6 compatible.
-bug#0000608: Minor coding error in lib/poller.php with a erroneous pclose statement.
-bug#0000615: Add sysContact and sysLocation output to device edit page.
-bug#0000619: Host templates not alphabetized on device creation form.
-bug#0000625: Cannot modify/create a user with a period in the username.
-bug#0000631: Invalid information concerning delimiter for index_order in SNMP Query documentation.
-bug#0000650: Clicking Cancel in Create Graphs for this Host does nothing.
-bug#0000656: Perl scripts using back ticks is not portable.
-bug: Stop MySQL connect messages from appearing in user interface.